--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pagina web html 2</title>
+    <title>pagina web html 2 2</title>
 </head>
 <body>
-    <h1>Mi pagina web HTML 2</h1>
+    <h1>Mi pagina web HTML 2 2</h1>
     <ul>
         <li><a href="index.html">Inicio</a></li>
-        <li><a href="pagina1.html">Pagina 1</a></li>
+        <li><a href="pagina1.html">Pagina 1 2</a></li>
     </ul>
     <p>Hola mundo este es el curso de git</p>
 </body>
