--- a/pagina1.html
+++ b/pagina1.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pagina web html 2 2</title>
+    <title>pagina web html 2 2 3</title>
 </head>
 <body>
     <h1>Pagina 1 2</h1>
     <ul>
         <li><a href="index.html">Inicio</a></li>
-        <li><a href="pagina1.html">Pagina 1 2</a></li>
+        <li><a href="pagina1.html">Pagina 1 2 3</a></li>
     </ul>
-    <p>Pagina 1  2este es el curso de git 2</p>
+    <p>Pagina 1  2este es el curso de git 2 3</p>
 </body>
 </html>
