--- a/contacto.html
+++ b/contacto.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
+    <title>Contacto 2</title>
 </head>
 <body>
-    <h1>Contacto</h1>
-    <h2>Esto es la pagina de contacto</h2>
+    <h1>Contacto 2</h1>
+    <h2>Esto es la pagina de contacto 2</h2>
 </body>
 </html>
