--- a/contacto.html
+++ b/contacto.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Contacto 2</h1>
     <h2>Esto es la pagina de contacto 2</h2>
+    <h2>Esto es la pagina de contacto 2</h2>
 </body>
 </html>
