--- a/pagina1.html
+++ b/pagina1.html
@@ -13,5 +13,6 @@
         <li><a href="pagina1.html">Pagina 1 2 3</a></li>
     </ul>
     <p>Pagina 1  2este es el curso de git 2 3</p>
+    <p>Pagina 1  2este es el curso de git 2 3</p>
 </body>
 </html>
