commit en master

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>pagina web html 2 2 3</title>
 </head>
 <body>
-    <h1>Mi pagina web HTML 2 2 4</h1>
+    <h1>Mi pagina web HTML 2 2 4 dfs</h1>
     <ul>
         <li><a href="index.html">Inicio</a></li>
         <li><a href="pagina1.html">Pagina 1 2 4</a></li>
